# KB-ULT

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_storage_key.py  0003_add_ingestion_jobs.py  0004_add_ingestion_job_events.py  0005_add_tenancy.py  0006_enable_rls.py
apps/api/scripts/: create_app_role.sql  seed_default_kb.py
apps/api/src/: composition.py  main.py
apps/api/src/application/auth/: __init__.py  service.py
apps/api/src/application/chat/: __init__.py  citations.py  prompt_builder.py  service.py
apps/api/src/application/ingestion/: __init__.py  service.py
apps/api/src/application/knowledge_base/: __init__.py  queries.py  service.py
apps/api/src/core/: config.py  constants.py  exceptions.py  identity.py  tenant_context.py  text.py
apps/api/src/domain/: __init__.py
apps/api/src/domain/entities/: __init__.py  chunk.py  ingestion_job.py  job_event.py  knowledge_asset.py  knowledge_base.py  raw_content.py  refresh_token.py  source.py  tenant.py  user.py
apps/api/src/domain/interfaces/: __init__.py  auth.py  cache.py  chunker.py  embedder.py  file_storage.py  job_queue.py  llm.py  parser.py  (+3 more)
apps/api/src/ingestion/: __init__.py  pipeline.py  registry.py  source_types.py
apps/api/src/retrieval/: __init__.py  filters.py  retriever.py
apps/api/tests/unit/: test_cache_keys.py  test_docling_pdf_adapter.py  test_filebase_adapter.py  test_ingestion_file_storage.py  test_pdf_parser.py  test_text_sanitizer.py  test_youtube_handler.py
(+103 files in other folders)
